# agentsburg

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  FEEDBACK_MAGISTRATE_OPUS.md  FEEDBACK_SONNET_AGENTS.md  LICENSE  README.md  SECURITY.md  SPEC.md  docker-compose.yaml  nginx.conf  package-lock.json  package.json  play_agent.py  start.sh  stress_test.py
.husky/: pre-commit
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260321_2008_3df3b2f0daab_phase1_agent_zone_transaction.py  20260321_2100_a8f2c3d1e9b7_phase2_goods_inventory.py  20260321_2200_c9d4e5f6a7b8_phase3_businesses_production.py  20260321_2200_d1e2f3a4b5c6_phase4_marketplace_trading.py  20260321_2300_e5f6a7b8c9d0_phase5_banking.py  20260321_2359_f6a7b8c9d0e1_phase6_government.py  20260322_0100_a1b2c3d4e5f6_phase8_messages.py  20260322_0200_b2c3d4e5f6a7_phase10_aggregates.py  20260322_0300_c3d4e5f6a7b8_add_business_default_recipe_slug.py  20260323_0100_d4e5f6a7b8c9_add_agent_is_active.py  20260324_0100_e5f6a7b8c9d0_add_agent_is_npc.py  20260324_0100_f7a8b9c0d1e2_add_agent_is_npc.py
backend/backend/: clock.py  config.py  database.py  database_errors.py  errors.py  events.py  hints.py  main.py  redis.py  tools.py
backend/backend/agents/: __init__.py  gathering.py  housing.py  inventory.py  messaging.py  service.py
backend/backend/api/: agents.py  businesses.py  city.py  common.py  dashboard.py  github.py  market.py  router.py  stats.py  world.py
backend/backend/banking/: __init__.py  _helpers.py  credit.py  deposits.py  loan_admin.py  loans.py  service.py
backend/backend/businesses/: __init__.py  employment.py  jobs.py  production.py  recipes.py  registration.py  service.py  work_context.py  workers.py
backend/backend/economy/: __init__.py  bankruptcy.py  bootstrap.py  cli.py  fast_tick.py  maintenance.py  maintenance_cli.py  npc_businesses.py  npc_consumers.py  npc_marketplace.py  npc_production.py  npc_scaling.py  seeds.py  slow_tick.py  snapshots.py  tick.py
backend/backend/government/: __init__.py  auditing.py  jail.py  service.py  taxes.py
backend/backend/handlers/: __init__.py  agents.py  banking.py  businesses.py  economy.py  employment.py  events.py  gathering.py  government.py  inventory.py  marketplace.py  trading.py
backend/backend/marketplace/: __init__.py  browsing.py  escrow.py  locking.py  matching.py  orderbook.py  trade_responses.py  trading.py
backend/backend/mcp/: __init__.py  auth.py  errors.py  hints.py  protocol.py  router.py  tools.py
backend/backend/models/: __init__.py  agent.py  aggregate.py  banking.py  base.py  business.py  good.py  government.py  inventory.py  marketplace.py  message.py  recipe.py  transaction.py  zone.py
backend/backend/rest/: catalog.py  common.py  router.py  routes_core.py  routes_economy.py  rules.py
backend/backend/spectator/: __init__.py  badges.py  commentary.py  conflicts.py  events.py  narrative.py  strategy.py  summary.py
backend/tests/: conftest.py  helpers.py  manual_integration.py  test_adversarial.py  test_bank_deadlock_regression.py  test_banking_simulation.py  test_economy_simulation.py  test_fairness_round2.py  test_feedback_fixes.py  test_full_playthrough.py  test_full_simulation.py  test_government_simulation.py  test_market_order_deadlock_regression.py  test_marketplace_bugs.py  test_npc_simulation.py  test_phase8_messaging.py  test_security_fixes.py  test_simulation.py  test_spectator.py  test_stress_scenarios.py  test_sybil_npc_fixes.py  test_tax_audit_regression.py  test_tax_fairness.py  test_tick_locking.py  test_trade_concurrency.py  test_trade_deadlock_regression.py  test_work_deadlock_regression.py
backend/tests/adversarial/: auth_and_input.py  bankruptcy_and_government.py  business_transfers.py  concurrency.py  marketplace_and_jail.py
backend/tests/simulation/: bootstrap.py  business.py  endgame.py  finance_and_law.py  helpers.py  npc.py  phase1_agents.py  phase2_housing.py  phase3_business.py  phase4_marketplace.py  phase5_trading.py  phase6_banking.py  phase7_government.py  phase8_endgame.py  trading.py
backend/tests/spectator/: test_city.py  test_commentary_summary.py  test_conflicts.py  test_event_feed.py  test_strategy_badges.py
backend/tests/stress/: collapse_recovery.py  collapse_setup.py  government_setup.py  government_transitions.py  helpers.py
(+65 files in other folders)
