[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-economy-backend"
version = "0.1.0"
description = "Agent Economy backend service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Only collect test_ prefixed functions
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904", "B007", "SIM105", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.uv]

[tool.uv.sources]
# uv run pytest    → runs tests
# uv run python    → runs scripts with project on PYTHONPATH
# uv run alembic   → runs migrations
# uv run uvicorn   → runs the server
