[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-economy-backend"
version = "0.1.0"
description = "Agent Economy backend service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Only collect test_ prefixed functions
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM",
    "DTZ",      # datetime without timezone — enforce Clock protocol
    "TCH",      # TYPE_CHECKING imports — enforce consistency
    "LOG",      # logging format — avoid f-strings in logger calls
    "TID",      # tidy imports — ban wildcard imports
    "RUF",      # ruff-specific rules
    "RET",      # return statement consistency
    "ICN",      # import conventions — standardize aliases
]
ignore = [
    "E501",      # line too long — flexible at 120
    "B008",      # mutable default — SQLAlchemy/Pydantic false positives
    "B007",      # loop variable not used — unpacking false positives
    "SIM105",    # simplify bool — explicit preferred
    "SIM108",    # else after return — readability
    "RET505",    # unnecessary elif — sometimes clearer
    "RET507",    # superfluous else after raise — sometimes clearer
    "B904",      # raise from in except — too noisy with ToolError wrappers
    "RUF001",    # ambiguous unicode — intentional × in user-facing strings
    "RUF002",    # ambiguous unicode in docstrings — same
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy needs uuid/datetime at runtime to resolve Mapped[] annotations (TCH003).
# FastAPI needs AsyncSession/aioredis resolvable at runtime for dependency injection (TCH002).
# With `from __future__ import annotations` + Python 3.14, hiding these behind
# TYPE_CHECKING breaks get_type_hints() which both frameworks rely on.
"backend/models/*.py" = ["TCH"]
"backend/rest/*.py" = ["TCH"]
"backend/api/*.py" = ["TCH"]
"backend/database.py" = ["TCH"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.uv]

[tool.uv.sources]
# uv run pytest    → runs tests
# uv run python    → runs scripts with project on PYTHONPATH
# uv run alembic   → runs migrations
# uv run uvicorn   → runs the server
